# semantic-framing-subspace-modeling

./: .gitignore  Final_thesis_v1.docx  README.md  media_list_template.csv  pipeline_manager.py  project_file_inventory.md  pyproject.toml  test.py
academic/: INTRO_TFG.md
academic/methodological_report/: 00_Executive_Summary.md  01_Data_Engineering.md  02_NLP_Architecture.md  03_Mathematical_Framework.md  04_Results_Visual_Narrative.md  05_Sociological_Interpretation.md  tfg_4_1_metodologia_eda.ipynb  tfg_4_2_matematicas_eda.ipynb  tfg_4_3_resultados_eda.ipynb  tfg_4_4_interpretacion_eda.ipynb
notebooks/: 02_eda_embeddings_integrity.ipynb  Harvest_Report_TFG.ipynb  all_data_check.ipynb  comparativa_techniques.ipynb  phase3_analysis_results.ipynb  phase3_complete_analysis.ipynb
results/report_phase4/: General_Report.ipynb  phase4_4_1_metodologia_eda.ipynb  phase4_4_2_matematicas_eda.ipynb  phase4_4_3_resultados_eda.ipynb  phase4_4_4_interpretacion_eda.ipynb
results/report_phase4/phase4_tables/: coverage_summary_windows.csv  qa_inputs_phase4_41.csv
runs/: run_note_20260212_142513.txt
scripts/: inspect_window7.py  prepare_phase3_analysis_data.py
src/: cli.py
src/data/: prepare_corpus.py
src/news_harvester/: cli.py  config.py  models.py
src/news_harvester/processing/: text.py
src/nlp/: build_anchors.py  extract.py  model.py  pipeline.py
src/reporting/: notebook.py  orchestrator.py
src/subspace_analysis/: pipeline.py  schemas.py  subspace.py
src/visualization/: paper_plots.py
(+60 files in other folders)
