[project]
name = "tfg-semantic-framing"
version = "1.0.0"
description = "TFG: Semantic Framing of Mental Health During COVID-19"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Alvaro Mengotti Medina", email = "[amedina.ieu2022@student.ie.edu]" }
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "playwright",
    "readability-lxml",
    "justext",
    "transformers>=4.30.0",
    "torch",
    "tqdm",
    "pyarrow",
    "fastparquet",
    "datasets",
    "scikit-learn",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
